# causalGEM

./: README.html  README.md  pyproject.toml  setup-guide.md
examples/: benchmark_tuebingen.py
src/causalgem/: __init__.py  diagnostics.py  estimator.py  simulation.py  utils.py
tests/: test_estimator.py
