[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalGEM"
version = "0.1.0"
description = "Quantification and Inference of Asymmetric Relations Under Generative Exposure Mappings (GEMs)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Soumik Purkayastha", email = "soumik@pitt.edu"},
    {name = "Peter X.-K. Song", email = "pxsong@umich.edu"}
]
maintainers = [
    {name = "Soumik Purkayastha", email = "soumik@pitt.edu"}
]
keywords = [
    "causal-inference",
    "causal-discovery",
    "entropy",
    "bivariate",
    "statistics",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "fastkde>=1.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
all = [
    "causalGEM[dev,docs,viz]",
]

[project.urls]
Homepage = "https://github.com/soumikp/causalGEM"
Documentation = "https://github.com/soumikp/causalGEM"
Repository = "https://github.com/soumikp/causalGEM"
Issues = "https://github.com/soumikp/causalGEM/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
causalgem = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=causalgem --cov-report=term-missing"
